<resources>
    <string name="app_name">MHWorld Database</string>
    <string name="app_name_icon">MHWDB</string>
    <string name="action_search">Suchen</string>
    <string name="action_bookmark">Lesezeichen</string>
    <string name="action_filter">Filter</string>
    <string name="action_clear">Löschen</string>
    <string name="action_cancel">Abbrechen</string>
    <string name="action_apply">Anwenden</string>
    <string name="action_undo">Rückgängig</string>
    <string name="general_no_data">Nothing here, Meowster…</string>
    <string name="general_none">Keine</string>
    <string name="rank_title">Rank</string>
    <string name="rank_short_low">LR</string>
    <string name="rank_short_high">HR</string>
    <string name="rank_short_master">MR</string>
    <string name="rank_short_all">ANY</string>
    <string name="rank_low">Low</string>
    <string name="rank_high">High</string>
    <string name="rank_master">Master</string>
    <string name="rank_full_low">Low Rank</string>
    <string name="rank_full_high">High Rank</string>
    <string name="rank_full_master">Master Rank</string>
    <string name="format_quantity_none">%1$d</string>
    <string name="format_quantity_x">x %1$d</string>
    <string name="format_rarity">Seltenheit %1$d</string>
    <string name="format_plus">%1$+d</string>
    <string name="format_percentage">%1$s%%</string>
    <string name="format_percentage_unknown">\??%</string>
    <string name="format_plus_percentage">%1$+d%%</string>
    <string name="format_element">%1$d (%2$d max)</string>
    <string name="format_element_hidden">(%1$d) (%2$d max)</string>
    <string name="ailment_roar_small">Brüllen (schwach)</string>
    <string name="ailment_roar_large">Brüllen (stark)</string>
    <string name="ailment_roar_extreme">Brüllen (extrem)</string>
    <string name="ailment_wind_small">Wind Druck (schwach)</string>
    <string name="ailment_wind_large">Wind Druck (stark)</string>
    <string name="ailment_wind_extreme">Wind Druck (extrem)</string>
    <string name="ailment_tremor_small">Erderschütterungen (schwach)</string>
    <string name="ailment_tremor_large">Erderschütterungen (stark)</string>
    <string name="ailment_tremor_extreme">Erderschütterungen (extreme)</string>
    <string name="ailment_defensedown">Verringerte Verteidgung</string>
    <string name="ailment_fireblight">FeuerPest</string>
    <string name="ailment_waterblight">WasserPest</string>
    <string name="ailment_thunderblight">DonnerPest</string>
    <string name="ailment_iceblight">EisPest</string>
    <string name="ailment_dragonblight">DrachenPest</string>
    <string name="ailment_blastblight">ExplosionsPest</string>
    <string name="ailment_poison">Gift</string>
    <string name="ailment_sleep">Schlaf</string>
    <string name="ailment_paralysis">Lähm</string>
    <string name="ailment_bleed">Blutung</string>
    <string name="ailment_stun">Betäubung</string>
    <string name="ailment_mud">Schlamm</string>
    <string name="ailment_effluvia">Miasma</string>
    <string name="extract_orange">Orange</string>
    <string name="extract_red">Rot</string>
    <string name="extract_white">Weiß</string>
    <string name="extract_green">Grün</string>
    <string name="extract_orange_abbr">ORN</string>
    <string name="extract_red_abbr">ROT</string>
    <string name="extract_white_abbr">WHT</string>
    <string name="extract_green_abbr">GRN</string>
    <string name="element_fire">Feuer</string>
    <string name="element_water">Wasser</string>
    <string name="element_thunder">Donner</string>
    <string name="element_ice">Eis</string>
    <string name="element_dragon">Drachen</string>
    <string name="element_non_elemental">Nicht-element</string>
    <string name="status_poison">Gift</string>
    <string name="status_sleep">Schlaf</string>
    <string name="status_paralysis">Lähmung</string>
    <string name="status_blast">Explosion</string>
    <string name="header_habitat">Habitat</string>
    <string name="header_weakness">Schwäche</string>
    <string name="header_ailments">Negative Effekte</string>
    <string name="header_hitzone_physical">Physisch</string>
    <string name="header_hitzone_elemental">Elemental</string>
    <string name="header_break">Brechen</string>
    <string name="header_crafting">Herstellen</string>
    <string name="header_gathering">Sammeln</string>
    <string name="header_rewards">Monster Belohnungen</string>
    <string name="header_quest_rewards">Quest Belohnungen</string>
    <string name="header_armor">Rüstung</string>
    <string name="header_charms">Talismanne</string>
    <string name="header_weapons">Waffen</string>
    <string name="header_decorations">Dekorationen</string>
    <string name="header_required_materials">Benötigte Materialien</string>
    <string name="header_required_materials_upgrade">Benötigte Materialien (Aufwerten)</string>
    <string name="header_required_materials_craft">Benötigte Materialien (Herstellen)</string>
    <string name="header_skills">Fähigkeiten</string>
    <string name="header_set_bonuses">Set Boni</string>
    <string name="header_skill">Fähigkeit</string>
    <string name="header_drop">Abwurf</string>
    <string name="header_upgrade_from">Aufgewerten von:</string>
    <string name="header_components">Komponente</string>
    <string name="header_armor_set_pieces">Rüstungs Set Teile</string>
    <string name="header_armor_set_skills">Rüstungs Set Fähigkeiten</string>
    <string name="header_active_set_bonuses">Aktive Set Boni</string>
    <string name="header_active_skills">Akive Fähigkeiten</string>
    <string name="header_description">Beschreibung</string>
    <string name="title_about">Über uns</string>
    <string name="title_settings">Einstellungen</string>
    <string name="title_changelog">Changelog</string>
    <string name="label_whats_new">Was ist neu!</string>
    <string name="label_rate_app">BEWERTE UNSERE APP!</string>
    <string name="action_ok">OK</string>
    <string name="preference_data_language">Daten Sprache</string>
    <string name="preference_weapons_attack_values">Zeige wahren Waffenangriff</string>
    <string name="preference_data_language_description">
        Zeige namen und Beschreibungen in %.
        \n Änderungen werden die App neu starten.
    </string>
    <string name="preference_weapons_attack_values_description">
        Dieses Spiel zeigt veränderte angriffs Werte. Aktiviere diese Einstellung um
        stattdessen den wahren Angriffswert anzuzeigen, welche in der Schadensformel verwendet werden.
    </string>
    <string name="preference_language_default">Standart</string>
    <string name="title_monster_list">Monster</string>
    <string name="tab_monsters_list_small">Klein</string>
    <string name="tab_monsters_list_large">Groß</string>
    <string name="tab_monsters_detail_summary">Zusammenfassung</string>
    <string name="tab_monsters_detail_damage">Schaden</string>
    <string name="tab_monsters_detail_rewards_master_rank">Master Rank</string>
    <string name="tab_monsters_detail_rewards_high_rank">High Rank</string>
    <string name="tab_monsters_detail_rewards_low_rank">Low Rank</string>
    <string name="title_item_list">Items</string>
    <string name="tab_item_list_items">Items</string>
    <string name="tab_item_list_materials">Materialien</string>
    <string name="tab_item_list_ammo">Munition</string>
    <string name="tab_item_list_misc">Anderes</string>
    <string name="tab_item_detail_summary">Zusammenfassung</string>
    <string name="tab_item_detail_usage">Benutzung</string>
    <string name="tab_item_detail_acquisition">Erhalten</string>
    <string name="item_price_buy">Kaufen</string>
    <string name="item_price_sell">Verkaufen</string>
    <string name="item_capacity_carry">Tragen</string>
    <string name="item_rarity">Seltenheit</string>
    <string name="item_crafting_list_title">Item Herstellung</string>
    <string name="item_crafting_yield">\x %1$d</string>
    <string name="item_crafting_source_condition_reward">%1$s %2$s</string>
    <string name="weapon_final_only">Letzte Stufe</string>
    <string name="weapon_final_upgrades">Letzte Stufe</string>
    <string name="title_weapons">Waffen</string>
    <string name="title_great_sword">Großschwert</string>
    <string name="title_long_sword">Langschwert</string>
    <string name="title_sword_and_shield">Schwert und Schild</string>
    <string name="title_dual_blades">Doppelklingen</string>
    <string name="title_hammer">Hammer</string>
    <string name="title_hunting_horn">Jagdhorn</string>
    <string name="title_lance">Lanze</string>
    <string name="title_gunlance">Gewehrlanze</string>
    <string name="title_switch_axe">Morph-axt</string>
    <string name="title_charge_blade">Energieklinge</string>
    <string name="title_insect_glaive">Insektenglefe</string>
    <string name="title_light_bowgun">Leichtes Bogengewehr</string>
    <string name="title_heavy_bowgun">Schweres Bogengewehr</string>
    <string name="title_bow">Bogen</string>
    <string name="tab_weapon_normal">Normal</string>
    <string name="tab_weapon_kulve">Kulve</string>
    <string name="tab_weapon_detail">Detail</string>
    <string name="tab_weapon_tree">Familie</string>
    <string name="filter_title_show_only">Zeige Nur</string>
    <string name="filter_title_sort_by">Sortieren Nach</string>
    <string name="weapon_attack">Angriff</string>
    <string name="weapon_attack_true">Angriff (Wahrer)</string>
    <string name="weapon_sharpness">Schärfe</string>
    <string name="weapon_element">Element</string>
    <string name="weapon_element_none">Kein</string>
    <string name="weapon_defense">Verteidigung</string>
    <string name="weapon_affinity">Affinität</string>
    <string name="weapon_handicraft">(mit Handwerk)</string>
    <string name="weapon_elderseal">Ältestensiegel</string>
    <string name="weapon_elderseal_none">Kein</string>
    <string name="weapon_elderseal_low">Niedrig</string>
    <string name="weapon_elderseal_average">Mittel</string>
    <string name="weapon_elderseal_high">Hoch</string>
    <string name="weapon_blade_phial_type">Phiolen-Typ</string>
    <string name="weapon_phial_exhaust">Ermüdung</string>
    <string name="weapon_phial_power">Kraft</string>
    <string name="weapon_phial_poison">Gift</string>
    <string name="weapon_phial_dragon">Drachen</string>
    <string name="weapon_phial_power_element">Kraft-Element</string>
    <string name="weapon_phial_paralysis">Lähmung</string>
    <string name="weapon_phial_impact">Aufprall</string>
    <string name="weapon_kinsect_bonus">Kinsect Bonus</string>
    <string name="weapon_kinsect_bonus_sever">Aptrennen</string>
    <string name="weapon_kinsect_bonus_speed">Geschwindigkeit</string>
    <string name="weapon_kinsect_bonus_element">Element</string>
    <string name="weapon_kinsect_bonus_health">Heilung</string>
    <string name="weapon_kinsect_bonus_stamina">Ausdauer</string>
    <string name="weapon_kinsect_bonus_blunt">Stumpf</string>
    <string name="weapon_kinsect_bonus_spirit_strength">Elan/Kraft</string>
    <string name="weapon_kinsect_bonus_stamina_health">Ausdauer/Heilung</string>
    <string name="weapon_gunlance_shelling">Beschuss</string>
    <string name="title_skills">Fähigkeiten</string>
    <string name="quest_label_objective">Ziel</string>
    <string name="kinsect_attack_type">Angriffs Typ</string>
    <string name="kinsect_attack_type_sever">Abtrennen</string>
    <string name="kinsect_attack_type_blunt">Stumpf</string>
    <string name="kinsect_dust_effect">Pollen Effekt</string>
    <string name="kinsect_power">Kraft</string>
    <string name="kinsect_speed">Geschwindigkeit</string>
    <string name="kinsect_heal">Heilung</string>
    <string name="user_equipment_set_no_decoration">Keine Dekoration</string>
    <string name="user_equipment_set_filter_name">Name</string>
    <string name="user_equipment_set_filter_add_skill">Füge eine neue Fähigkeit hinzu</string>
</resources>