<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_large">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title_show_only"
            style="@style/TextSubHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/filter_title_show_only"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_name_filter"
            style="@style/TextSubHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/user_equipment_set_filter_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_show_only" />

        <LinearLayout
            android:id="@+id/name_filter_entries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_name_filter">

            <EditText
                android:id="@+id/name_filter_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/title_skill"
            style="@style/TextSubHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/title_skills"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_filter_entries" />

        <LinearLayout
            android:id="@+id/skill_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_skill">

            <com.gatheringhallstudios.mhworlddatabase.components.IconLabelButtonCell
                android:id="@+id/skill_1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_height_medium"
                app:labelText="@string/user_equipment_set_filter_add_skill" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/bottom_space"
            android:layout_width="match_parent"
            android:layout_height="@dimen/padding_footer_space"
            app:layout_constraintTop_toBottomOf="@id/skill_list" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>